@@ -3,6 +3,7 @@
 
 #include "CGUIAttribute.h"
 #include "IGUIEditBox.h"
+#include "EGUIEditTypes.h"
 
 namespace irr
 {
@@ -18,8 +19,8 @@ namespace gui
 			AttribEditBox(0)
 		{
 			core::rect<s32> r = getAbsolutePosition();
-			core::rect<s32> r2(0, Environment->getSkin()->getFont()->getDimension(L"A").Height + 10, 
-				r.getWidth() - 5, 
+			core::rect<s32> r2(0, Environment->getSkin()->getFont()->getDimension(L"A").Height + 10,
+				r.getWidth() - 5,
 				Environment->getSkin()->getFont()->getDimension(L"A").Height*2 + 15 );
 
 			AttribEditBox = environment->addEditBox(0, r2, true, this, -1);
@@ -46,15 +47,18 @@ namespace gui
 		{
 			if (!Attribs)
 				return true;
-			
+
 			Attribs->setAttribute(Index, AttribEditBox->getText());
 			AttribEditBox->setText(Attribs->getAttributeAsStringW(Index).c_str());
 
 			return CGUIAttribute::updateAttrib(sendEvent);
 		}
 
-		//! this shoudln't be serialized, but this is included as it's an example
-		virtual const c8* getTypeName() const { return "string_attribute"; }
+		//! Returns the type name of the gui element.
+		virtual const c8* getTypeName() const
+		{
+			return GUIEditElementTypeNames[EGUIEDIT_STRINGATTRIBUTE];
+		}
 
 	private:
 		IGUIEditBox*		AttribEditBox;
